# gitingest-mcp

./: .gitignore  Cargo.toml
.github/workflows/: deploy.yml
crates/git_provider/: Cargo.toml
crates/git_provider/src/: ignore_patterns.rs  lib.rs
crates/github_provider/: Cargo.toml
crates/github_provider/src/: lib.rs
crates/gitingest_mcp_tools/: Cargo.toml
crates/gitingest_mcp_tools/src/: github.rs  gitlab.rs  lib.rs  provider.rs
crates/gitlab_provider/: Cargo.toml
crates/gitlab_provider/src/: lib.rs
scripts/: install.sh
src/: main.rs
