[package]
name = "gitingest-mcp"
version = "0.3.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
context-server.workspace = true
git_provider = { path = "crates/git_provider" }
github_provider = { path = "crates/github_provider" }
gitingest_mcp_tools = { path = "crates/gitingest_mcp_tools" }
gitlab_provider = { path = "crates/gitlab_provider" }
http-client-reqwest.workspace = true
http-client.workspace = true
parking_lot = "0.12.3"
serde_json.workspace = true
tokio = { version = "1.42", features = ["full"] }

[workspace]
resolver = "3"
members = [
    "crates/git_provider",
    "crates/github_provider",
    "crates/gitingest_mcp_tools",
    "crates/gitlab_provider",
]

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1.83"
base64 = "0.13.0"
context-server = { git = "https://github.com/fdionisi/context-server", version = "0.8.2" }
futures = "0.3"
glob = "0.3.2"
http-client = { git = "https://github.com/fdionisi/http-client", version = "0.2.0" }
http-client-reqwest = { git = "https://github.com/fdionisi/http-client", version = "0.2.0" }
indoc = "2.0.5"
serde = "1"
serde_json = "1"
urlencoding = "2.1.0"
