[package]
name = "gitlab_provider"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
futures.workspace = true
git_provider = { path = "../git_provider" }
glob.workspace = true
http-client.workspace = true
serde.workspace = true
serde_json.workspace = true
urlencoding.workspace = true
